tests/bad/func_ret_from_void.oc
/// fail: Cannot return a value from a void function

def foo() {
    return 5
}
